--- a/src/main/resources/templates/fragments/main-navbar.html
+++ b/src/main/resources/templates/fragments/main-navbar.html
@@ -11,11 +11,13 @@
 
             <a href="/accounts" type="button" class="btn btn-primary btn-sm"
                     data-mdb-target="register">
+                <i class="fas fa-user-plus"></i>&nbsp;
                 <span>Register</span>
             </a>
             &nbsp;&nbsp;&nbsp;
             <a href="/login" type="button" class="btn btn-primary btn-sm"
                data-mdb-target="login">
+                <i class="fa fa-sign-in"></i>&nbsp;
                 <span>Login</span>
             </a>
 
