--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -49,13 +49,16 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li>
-                        <a class="dropdown-item" href="/user-profile/{{id}}">My profile</a>
+                        <a class="dropdown-item" href="/user-profile/{{id}}">
+                            <i class="far fa-user-circle"></i>&nbsp; My profile</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="/profile/{{id}}">Company profile</a>
+                        <a class="dropdown-item" href="/profile/{{id}}">
+                            <i class="far fa-building"></i>&nbsp; Company profile</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="/main-page">Logout</a>
+                        <a class="dropdown-item" href="/main-page">
+                            <i class="fa fa-sign-out"></i>&nbsp;Logout </a>
                     </li>
                 </ul>
             </li>
