--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -33,7 +33,7 @@
                             <p id="page-title"><b>Company profile</b></p>
                         </div>
                         <div class="col-6">
-                            <div id="editButton">
+                            <div class="editButton">
                                 <button type="button" class="btn btn-primary icon-spacing" data-mdb-toggle="modal"
                                         data-mdb-target="#edit{{id}}">
                                     <i class="fa-regular fa-pen-to-square"></i>
