--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -37,8 +37,8 @@
                             <div class="editButton">
                                 <button type="button" class="btn btn-primary icon-spacing" data-mdb-toggle="modal"
                                         data-mdb-target="#edit{{id}}">
-                                    <i class="fa-regular fa-pen-to-square"></i>
-                                    <span class="remove-action-name">Edit</span>
+                                    <i class="fa-regular fas fa-user-edit"></i>
+                                    <span class="remove-action-name">&nbsp;Edit</span>
                                 </button>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                             <button type="button" class="btn btn-primary icon-spacing" data-mdb-toggle="modal"
                                     data-mdb-target="#changePassword{{id}}">
                                 <i class="fa-regular fa-pen-to-square"></i>
-                                <span class="remove-action-name">Change password</span>
+                                <span class="remove-action-name">&nbsp;Change password</span>
                             </button>
                         </div>
                     </div>
