--- a/src/main/resources/static/style/announcement-style.css
+++ b/src/main/resources/static/style/announcement-style.css
@@ -12,14 +12,31 @@
     margin-right: 3%;
 }
 
-#myContainer {
-    margin-left: 3%;
-    margin-bottom: 5%;
-    margin-top: 4.5%;
+table {
+    border:1px solid #948787;
+}
+
+.formm {
+    box-sizing: border-box;
+    position: relative;
+    width: 80%;
+    height: 620px;
+    background: #ffffff;
+    border: 1px solid #090010;
+    border-radius: 5px;
+    font-size: 100%;
+    margin-left: 7%;
+    margin-top: 6%;
 }
 
 #page-title {
+    margin-left: 3%;
+    margin-top: 1.5%;
     font-size: 2rem;
+}
+
+#addAnnouncement {
+    margin-left: 3%;
 }
 
 body {
@@ -27,16 +44,13 @@ body {
 }
 
 .announcement-table {
-    overflow-y: scroll;
-    overflow-x: scroll;
     height: 100%;
-    width: 95%;
+    width: 230%;
     display: inline-block;
     position: static;
     left: 22%;
     top: 25%;
     background: #ffffff;
-    margin: auto;
     color: #2a47bd;
 }
 
@@ -46,6 +60,9 @@ body {
 
 .tableFixHead {
     overflow: auto;
+    position: static;
+    margin-left: 5%;
+    width: 87.8%;
     height: 450px;
 }
 
@@ -75,6 +92,14 @@ tbody tr {
     width: 5%;
 }
 
+.colEdit {
+    width: 45%;
+}
+
+.colDelete {
+    width: 55%;
+}
+
 .col2 {
     min-width: 120px;
 }
@@ -87,8 +112,8 @@ tbody tr {
     min-width: 200px;
 }
 
-.deleteButton, .editButton {
-    padding-right: 10px;
+.deleteButton {
+   padding-left: 10px;
 }
 
 @media (max-width: 700px) {
