--- a/src/main/resources/static/style/job-company-style.css
+++ b/src/main/resources/static/style/job-company-style.css
@@ -12,13 +12,22 @@
     margin-right: 3%;
 }
 
-#myContainer {
-    margin-left: 3%;
-    margin-bottom: 5%;
-    margin-top: 4.5%;
+.formm {
+    box-sizing: border-box;
+    position: relative;
+    width: 80%;
+    height: 620px;
+    background: #ffffff;
+    border: 1px solid #090010;
+    border-radius: 5px;
+    font-size: 100%;
+    margin-left: 7%;
+    margin-top: 6%;
 }
 
 #page-title {
+    margin-left: 3%;
+    margin-top: 1.5%;
     font-size: 2rem;
 }
 
@@ -34,8 +43,11 @@ body {
     left: 22%;
     top: 25%;
     background: #ffffff;
-    margin: auto;
     color: #2a47bd;
+}
+
+table {
+    border:1px solid #948787;
 }
 
 #table-body {
@@ -44,7 +56,9 @@ body {
 
 .tableFixHead {
     overflow-y: scroll;
-    width: 69%;
+    position: static;
+    margin-left: 5%;
+    width: 87.8%;
     height: 450px;
 }
 
