--- a/src/main/resources/templates/candidate-announcement.html
+++ b/src/main/resources/templates/candidate-announcement.html
@@ -28,7 +28,7 @@
                 <table class="table table-bordered table-sm dashboard-table">
                     <thead>
                     <tr>
-                        <th class="col1">Nr.</th>
+                        <th class="col1"></th>
                         <th class="col2">First Name</th>
                         <th class="col2">Last Name</th>
                         <th class="col3">Email</th>
@@ -40,7 +40,7 @@
                     <tbody>
                     {{#candidates}}
                     <tr>
-                        <td class="col1">{{index}}</td>
+                        <td class="col1"></td>
                         <td class="col2">{{firstName}}</td>
                         <td class="col2">{{lastName}}</td>
                         <td class="col3">{{email}}</td>
