--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -19,6 +19,11 @@
                 <i class="fa-solid fa-list-ul fa-fw me-3"></i><span>Announcement</span>
             </a>
 
+            <a href="/users-company/{{id}}" class="list-group-item list-group-item-action py-2 ripple
+        {{#users-companyActive}}active{{/users-companyActive}}">
+                <i class="fa fa-users fa-fw me-3"></i><span>Users company</span>
+            </a>
+
         </div>
     </div>
 </nav>
