added actions on users company page

--- a/src/main/resources/static/style/users-company-style.css
+++ b/src/main/resources/static/style/users-company-style.css
@@ -2,11 +2,19 @@
     font-family: 'Trispace';
     src: url('../fonts/Trispace.ttf');
 }
+.error {
+    color: #d71313;
+}
 
 .mymodal {
     margin-left: 3%;
     margin-right: 3%;
 }
+
+#addUsers {
+    margin-left: 3%;
+}
+
 
 .formm {
     box-sizing: border-box;
