--- a/src/main/resources/templates/jobs-company.html
+++ b/src/main/resources/templates/jobs-company.html
@@ -27,8 +27,8 @@
 <main>
     <div class="formm">
         <p id="page-title"><b>Jobs company</b></p>
-        <button type="button" class="btn btn-primary" data-mdb-toggle="modal" id="addJobs"
-                data-mdb-target="#addJob">
+        <button type="button" class="btn btn-primary" id="addJobs"
+                data-mdb-toggle="modal" data-mdb-target="#addJob">
             <i class="fa-solid fa-plus"></i>&nbsp;&nbsp;Add
         </button>
         <div class="modal modal-lg fade" id="addJob" tabindex="-1" role="dialog"
